--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <title>A Tab-Component</title>
     <meta name="viewport"
           content="width=device-width, initial-scale=1" />
+
+    <link href="https://fonts.googleapis.com/css?family=Lora|Roboto"
+          rel="stylesheet">
+
     <link rel="stylesheet"
           href="/dist/styles/main.css" />
   </head>
@@ -22,6 +26,78 @@
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
           <aside data-module="tab"></aside>
+
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+
+          <aside data-module="tab"
+                 class="js-enhance-tab-target">
+            <div class="tab"
+                 role="tablist"
+                 aria-live="polite">
+
+              <ul class="tab__header">
+                <li class="tab__header-item">
+                  <h2 class="tab__header-item-title"
+                      tabindex="0"
+                      aria-controls="tab-panel-content-sports"
+                      id="tab-panel-trigger-sports">
+                    Sports
+                  </h2>
+                </li>
+
+                <li class="tab__header-item">
+                  <h2 class="tab__header-item-title"
+                      tabindex="0"
+                      aria-controls="tab-panel-content-politics"
+                      id="tab-panel-trigger-another-politics">
+                    Politics
+                  </h2>
+                </li>
+              </ul>
+
+              <div class="tab__panel"
+                   role="tabpanel"
+                   id="tab-panel-content-sports"
+                   aria-labelledby="tab-panel-trigger-sports">
+
+                <h3 class="tab__panel-title">Sports</h3>
+
+                <ol>
+                  <li class="tab-list-item">
+                    <a href="http://theguargian.com"
+                       class="tab-list-item__title">A winners article</a>
+                  </li>
+                </ol>
+              </div>
+
+              <div class="tab__panel"
+                   role="tabpanel"
+                   id="tab-panel-content-another-politics"
+                   aria-labelledby="tab-panel-trigger-another-politics">
+
+                <h3 class="tab__panel-title">Politics</h3>
+
+                <ol>
+                  <li class="tab-list-item">
+                    <a href="http://theguargian.com"
+                       class="tab-list-item__title">Let's change the world</a>
+                  </li>
+                  <li class="tab-list-item">
+                    <a href="http://theguargian.com"
+                       class="tab-list-item__title">We want to see a difference!</a>
+                  </li>
+                  <li class="tab-list-item">
+                    <a href="http://theguargian.com"
+                       class="tab-list-item__title">Let's change us</a>
+                  </li>
+                </ol>
+              </div>
+            </div>
+
+            <button class="js-enhance-tab">Let's enhance with JS!</button>
+          </aside>
 
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
