Add few comments, last polish

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
+          <h2>Progressive Enhancement</h2>
+
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
 
           <aside data-module="tab"
@@ -40,21 +42,21 @@
 
               <ul class="tab__header">
                 <li class="tab__header-item">
-                  <h2 class="tab__header-item-title"
+                  <h3 class="tab__header-item-title"
                       tabindex="0"
                       aria-controls="tab-panel-content-sports"
                       id="tab-panel-trigger-sports">
                     Sports
-                  </h2>
+                  </h3>
                 </li>
 
                 <li class="tab__header-item">
-                  <h2 class="tab__header-item-title"
+                  <h3 class="tab__header-item-title"
                       tabindex="0"
                       aria-controls="tab-panel-content-politics"
                       id="tab-panel-trigger-another-politics">
                     Politics
-                  </h2>
+                  </h3>
                 </li>
               </ul>
 
@@ -96,8 +98,6 @@
                 </ol>
               </div>
             </div>
-
-            <button class="js-enhance-tab">Let's enhance with JS!</button>
           </aside>
 
           <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
