--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
           rel="stylesheet">
 
     <link rel="stylesheet"
-          href="/dist/styles/main.css" />
+          href="dist/styles/main.css" />
   </head>
 
   <body>
@@ -107,7 +107,7 @@
       </article>
     </div>
 
-    <script src="/dist/scripts/app.bundle.js"
+    <script src="dist/scripts/app.bundle.js"
             async
             defer></script>
   </body>
